<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".DrawerActivity">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/action_search"
        app:showAsAction="ifRoom"
        android:orderInCategory="10"/>

    <item
        android:id="@+id/action_grid_size"
        android:title="@string/action_grid_size">
        <menu>
            <group
                android:id="@+id/group_grid_size"
                android:checkableBehavior="single"
                tools:ignore="HardcodedText">
                <item
                    android:id="@+id/action_grid_size_1"
                    android:title="@string/grid_size_1" />
                <item
                    android:id="@+id/action_grid_size_2"
                    android:title="@string/grid_size_2" />
                <item
                    android:id="@+id/action_grid_size_3"
                    android:title="@string/grid_size_3" />
                <item
                    android:id="@+id/action_grid_size_4"
                    android:title="@string/grid_size_4" />
                <item
                    android:id="@+id/action_grid_size_5"
                    android:title="@string/grid_size_5" />
                <item
                    android:id="@+id/action_grid_size_6"
                    android:title="@string/grid_size_6" />
                <item
                    android:id="@+id/action_grid_size_7"
                    android:title="@string/grid_size_7" />
                <item
                    android:id="@+id/action_grid_size_8"
                    android:title="@string/grid_size_8" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/action_sort_order"
        android:title="@string/action_sort_order">
        <menu>
        </menu>
    </item>

    <item
        android:id="@+id/action_colored_footers"
        android:checkable="true"
        android:title="@string/colored_footers" />

    <item
        android:id="@+id/action_rescan"
        android:icon="@drawable/ic_scanner_white_24dp"
        android:title="@string/reset_discography"
        app:showAsAction="ifRoom"
        android:orderInCategory="11"/>

    <item
        android:id="@+id/action_podcast"
        android:icon="@drawable/ic_mic_white_24dp"
        android:title="@string/podcast_app"
        app:showAsAction="always"
        android:orderInCategory="10"/>
</menu>