<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory android:title="@string/pref_header_theme">

        <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATEListPreference
            app:iconSpaceReserved="false"
            android:defaultValue="system_dark"
            android:entries="@array/pref_general_theme_list_titles"
            android:entryValues="@array/pref_general_theme_list_values"
            android:key="general_theme"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_general_theme" />

        <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATEListPreference
            app:iconSpaceReserved="false"
            android:defaultValue="classic"
            android:entries="@array/pref_theme_style_list_titles"
            android:entryValues="@array/pref_theme_style_list_values"
            android:key="theme_style"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_theme_style" />

    </com.kabouzeid.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory>

</androidx.preference.PreferenceScreen>
